Added some initial tests and added some edge case catching to the UI